# filler

./: CMakeLists.txt  Makefile  README.md  akorzhak.filler  filler.trace  temp.txt
ft_printf/: Makefile
ft_printf/libft/: ft_strdup.c
includes/: filler.h
resources/players/: akorzhak.filler
src/: free.c  init.c  main.c  manhattan_algo.c  messages.c  parsing.c  place.c  util.c
visualizer/: v1  v2  v3
