cmake_minimum_required(VERSION 3.9)
project(filler)

set(CMAKE_CXX_STANDARD 11)

include_directories(includes ft_printf/includes)

add_executable(filler
        ft_printf/includes/libftprintf.h
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_itoa_base.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_print_bits.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_reverse_bits.c
        ft_printf/libft/ft_split_white.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlcpy.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strrev.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/get_next_line.c
        ft_printf/libft/libft.h
        ft_printf/src/ft_addflags.c
        ft_printf/src/ft_addsize.c
        ft_printf/src/ft_get_snb.c
        ft_printf/src/ft_get_unb.c
        ft_printf/src/ft_intlen.c
        ft_printf/src/ft_min.c
        ft_printf/src/ft_print_percent.c
        ft_printf/src/ft_printarg.c
        ft_printf/src/ft_printc.c
        ft_printf/src/ft_printf.c
        ft_printf/src/ft_printnb.c
        ft_printf/src/ft_prints.c
        ft_printf/src/ft_put.c
        ft_printf/src/ft_unicode.c
        ft_printf/src/ft_zero_plus_space.c
        includes/filler.h
        src/main.c
        src/messages.c)
